--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap');
+
 body {
 	background-color: #282c34;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .App {
 	width: 50%;
 	margin: 0 auto;
-	border: 2px solid red;
-	padding: 5px;
 }
 
 .appContainer {
@@ -14,22 +15,25 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	border: 2px solid red;
 	padding: 5px;
+	margin: 5px;
 }
 
 .header {
 	color: rgb(249, 255, 192);
-	border: 2px solid red;
-	padding: 5px;
+	font-size: 1.5rem;
 	margin: 30px;
+	padding: 5px;
+	margin: 5px;
 }
-.form{
 
+.form {
+	padding: 5px;
+	margin: 5px;
 }
 
-.input{
-	font-size: 17px;
+.input {
+	font-size: 24px;
 	color: rgb(249, 255, 192);
 	background-color: #282c34;
 	width: 95%;
@@ -37,4 +41,35 @@ body {
 	outline: none;
 	border-bottom: 2px solid rgb(249, 255, 192);
 	padding: 5px;
+	margin: 5px;
+}
+
+.todoListContainer {
+	padding: 5px;
+	margin: 5px;
+	align-items: center;
+}
+
+.todoListContainer ul {
+	padding: 5px;
+	margin: 5px;
+	list-style: none;
+}
+
+.task {
+	color: #282c34;
+	border: 2px solid red;
+	background-color: rgb(249, 255, 192);
+	font-weight: 700;
+	font-size: 17px;
+	padding: 12px;
+	margin: 5px;
+	border-radius: 5px;
+	cursor: pointer;
+	height: fit-content;
+}
+.icon{
+	float: right;
+	margin: 5px;
+	margin-left: 20px;
 }
